StarSpan ChangeLog
$Id$

2007-12-03 (1.0.03) Performance inprovement with spatial filter.
	- traverser.cc: Spatial filtering is now used by default. In case no 
	spatial	filtering is desired, define the environment variable 
	STARSPAN_NO_SPATIAL_FILTER.
		
	Performance comparison with the --stats command on the following inputs:
	  vector: /proj/delta/gis/field_work/field_data/200706/data3/all_teams_nudged.shp 
	  64 rasters: /proj/delta/raster/hymap/base/ref1_geo3/200706/*_ort
	  
	   Rasters with intersecting pixels: 47
	Rasters with No intersecting pixels: 17
	
	'time' reported:            real        user     system      
	   With spatial filter:    133.63      76.34    16:35.81 
	     No spatial filter:  20m10.507s  5m55.868s  1m23.537s
	In this case the improvement gives a ~10 times speedup!
	
2007-12-01
	- Testing the use of spatial filter to get features:
		STARSPAN_USE_SPATIAL_FILTER=1 starspan ...
	  under tests/, for example:
	  	make STARSPAN=starspan STARSPAN_USE_SPATIAL_FILTER=1 test_csv
	
2007-11-30 (1.0.02)
	- --stats now accepts multiple rasters; each one processed at a time
	- NOTE about the call observer->intersectionFound(OGRFeature* feature)
	  in Traverser::process_feature:
		Particularly in the case of a GeometryCollection, it might be the
		case that this feature is found to be an intersecting one even though
		that no pixel will be found to be intersecting. Observers may in general
		want to confirm the actual intersection by looking at the number of pixels
		that are reported to be intersected.
	
2007-11-19
   	- Option --fields now also accepts "none"
	- Fixed argument check for --RID
	
	
2007-11-16: Carlos Rueda
	** Starting version 1.0.xx **

	- configure.in to version 1.0.01	
	- --report too restrictive about inputs: fixed. 
	
2006-3-25: perrygeo
      - configure.in to version 0.998
      - src/tranverser/polyqt.cc : relative epsilon instead of constant

2006-03-24:  perrygeo
      - Exposed the SUM statistic